function(gen_elf name)
    add_executable(${name} ${name}.cpp)
    target_include_directories(${name} PRIVATE ${CMAKE_SOURCE_DIR}/src)
    target_link_libraries(${name} PRIVATE mynet)
    target_compile_options(${name} PRIVATE -fsanitize=address -g)
    target_link_options(${name} PRIVATE -fsanitize=address)
endfunction()

gen_elf(cli_tcp)
gen_elf(cli_tls)
gen_elf(cli_udp)
gen_elf(peer_tcp)
gen_elf(peer_tls)
gen_elf(peer_udp)
gen_elf(reactor_tcp)
gen_elf(reactor_tls)
gen_elf(proactor_tcp)